== Release 4.4.2.0

    * New: Incremental QUADRATURE ENCODER instruction.
    See manual.txt and
    https://github.com/LDmicro/LDmicro/wiki/Incremental-QUADRATURE-ENCODER

    * Fixed: Bug: UART box shows up even if UART is deleted from the ladder
    diagram after simulating.(#126)

    * Fixed: The code generated for the Reset instruction
    of any Counter type looks incorrect as the counter variable is reset
    to 0 and not to the counter's "Start Value" value.(#125)

    * Fixed: The code generated by "Compile ANSIC" for the Look-Up Table
    instruction [LUT] does not include a declaration for the table's index
    variable.(#124)

    * Fixed: The code generated by "Compile ANSIC" for the Logical Shift
    instruction generates a declaration "STATIC SBYTE 1 = 0;" (#123)

    * Fixed: For the PWL instruction display the Index variable in the GUI
    and allow its size to be edited.(#122)

    * Fixed: Bug in FORMATTED STRING OVER UART element, when using
    command \0xFE instead of \xFE ldmicro closes.(#120)

== Release 4.4.1.1

    * Fixed: Bug in insert SET BIT instructions with arduino (#118)

== Release 4.4.1.0

    * Fixed: "Compile ANSIC" fails and LDmico exits with an error when
    the INT_SET_VARIABLE_NEG instruction is used. #117

    * Fixed: Test bit instructions (IF SET bit) with arduino #116

    * New: Kind of inputs of ladder elements
    https://github.com/LDmicro/LDmicro/wiki/Kind-of-inputs-of-ladder-elements

    '-' Direct static logic input. Active at external 1.
    'o' Inverse static logic input. Logic negation at input. External 0 produces internal 1.
    '/' Dynamic input active on 0 to 1 transition for positive logic.
    '\' Dynamic input active on 1 to 0 transition for positive logic.

    * New: Timer with variable delay
    https://github.com/LDmicro/LDmicro/wiki/Timer-with-variable-delay

== Release 4.4.0.2

    * Optimized: PIECEWISE LINEAR TABLE (reduced size 10%), ADD and SUB operations for PIC's.
